[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snip-dedup"
version = "0.0.1"
description = 'SNIP: compact index for large dataset'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["snip", "deduplicate", "index", "laion", "machine learning", "computer vision", "dataset"]
authors = [
  { name = "Ryan Webster", email = "rwebstr@gmail.com" },
  { name = "Matthieu Pizenberg", email = "matthieu.pizenberg@gmail.com" },
]
classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastparquet === 2023.2.0",
  "fire == 0.5.*",
  "numpy >= 1.24.2, < 2.0",
  "pandas >= 1.5.3, < 2.0",
  "requests >= 2.28.2, < 3.0",
]

[project.urls]
Documentation = "https://github.com/ryanwebster90/snip-dedup#readme"
Source = "https://github.com/ryanwebster90/snip-dedup"

[project.scripts]
snip = "snip_dedup.cli:main"
